# PiElectricsEagles-Configurator

./: README.md  auto.sh  database.txt
Calc Varibles/: calc.js  index.html
PiElectricsEagles-PiD-Configurator/: build.gradle  database.txt  settings.gradle
PiElectricsEagles-PiD-Configurator/src/main/java/: module-info.java
PiElectricsEagles-PiD-Configurator/src/main/java/api/: AlertBox.java  Api.java  Arduino.java  Controller.java  Main.java
PiElectricsEagles-PiD-Configurator/src/main/resources/: dark.css  light.css  main.fxml
config_maker/src/: main.rs
get_last_picode/: Cargo.toml
get_last_picode/src/: main.rs
