[package]
name = "get_last_picode"
version = "0.1.0"
authors = ["Alex <sahsariga111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
url = "2.2.1"
sha256 = "1.0.2"